# aicode

./: .gitignore  .gitmodules  README.md
doc/: 微信支付集成设计文档.md  微信物流配送接入设计文档.md  购物车后续优化设计文档.md  购物车结算设计文档.md  购物车设计文档.md  配送与运费设置帮助说明.md  配送方式与运费管理设计文档.md
mall-littleprogram/: .gitignore  app.js  app.json  package.json  project.config.json
mall-littleprogram/custom-tab-bar/: data.js
mall-littleprogram/utils/: addressParse.js  getPermission.js  request.js
mallservice-python/: AUTHORS  ChangeLog  README.rst  requirements.txt  setup.cfg
mallservice-python/etc/mall/: mall.conf
mallservice-python/mall/: __init__.py  i18n.py
mallservice-python/mall/cmd/: api.py  area.json  dbsync.py
mallservice-python/mall/common/: common.py  constant.py  gettextutils.py
mallservice-python/mall/conf/: __init__.py  api.py  common.py  core.py  db.py
mallservice-python/mall/db/engines/: mysql.py
mallservice-python/mall/db/migrate/: regions_import.sql
mallservice-python/mall/db/migration/: init_region.sql
mallservice-python/mall/db/models/: base.py
mallservice-python/mall/db/models/Goods/: model.py  sql.py
mallservice-python/mall/db/models/GoodsCatalog/: model.py  sql.py
mallservice-python/mall/db/models/Task/: model.py
mallservice-python/mall/db/models/User/: model.py  useraddresssql.py  usersql.py
mallservice-python/mall/service/: address_service.py  goods_service.py  goodscatalog_service.py  user_service.py
mallservice-python/mall/view/: router_address.py  router_demo.py  router_good.py  router_goods.py  router_goodscatalog.py  router_user.py
(+17 files in other folders)
