[metadata]
name = mall
summary = mall managment system as a Service
description_file =
    README.rst
long_description_content_type = text/markdown
author = JIASIRUI
author_email = jiasirui3@163.com
python_requires = >=3.8
classifier =
    Environment :: MALL
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[files]
packages =
    mall

[entry_points]
console_scripts =
    mall_api = mall.cmd.api:main
    mall_task = mall.cmd.task:main
    mall_db_sync = mall.cmd.dbsync:main

mall.database.migration_backend =
    sqlalchemy = oslo_db.sqlalchemy.migration
